@@ -1,3 +1,11 @@
+/*
+ *  Copyright  iqiny.com
+ *
+ *  https://gitee.com/iqiny/silly
+ *
+ *  project name：silly-activiti 1.0.3-RELEASE
+ *  project description：top silly project pom.xml file
+ */
 package com.iqiny.silly.activiti.convertor;
 
 
@@ -5,6 +13,7 @@ import com.iqiny.silly.common.util.StringUtils;
 import com.iqiny.silly.core.base.core.SillyVariable;
 import com.iqiny.silly.core.convertor.SillyVariableConvertor;
 import org.springframework.beans.BeanUtils;
+import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -15,6 +24,7 @@ import java.util.Map;
  * 数据Value: List<String>
  * map: {key: "key", value: ["1","2","3"]}
  */
+@Component
 public class SillyListConvertor implements SillyVariableConvertor<List<String>> {
 
     @Override
@@ -46,7 +56,7 @@ public class SillyListConvertor implements SillyVariableConvertor<List<String>> 
         try {
             final String[] split = variableText.split(",");
             for (String val : split) {
-                final V copy = (V) variable.getClass().newInstance();
+                final V copy = (V) variable.getClass().getConstructor().newInstance();
                 BeanUtils.copyProperties(variable, copy);
                 copy.setVariableText(val);
                 list.add(copy);
